# minerva

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.2004.package  Jenkinsfile  Jenkinsfile.package  Jenkinsfile.publish.docker.image  Makefile  README  README.md  build  develop-compose.yml  develop.dockerfile  init-minerva-db.sh  install.sh  management-test.Dockerfile  management.Dockerfile  postgresql.conf  production.dockerfile  readthedocs.dockerfile  recordcountstatistics.txt  run-test  run-tests  run-tests.sh  schema.yml  test.dockerfile  update-schema-doc  update_statistics  wait-for-db
.github/workflows/: build.yml
api-spec/: api.yaml
crates/admin-service/: Cargo.toml  entityset.rs  error.rs  header.rs  kpi.rs  main.rs  serviceerror.rs  trendmaterialization.rs  trendstore.rs  trigger.rs
crates/cli/: Cargo.toml  main.rs  postgresql.conf
crates/event-service/: Cargo.toml  main.rs
crates/integration-tests/: Cargo.toml  postgresql.conf
crates/minerva/: Cargo.toml
debian/: control  minerva-etl.install
design/: notification_export.md
doc/: conf.py  index.rst  introduction.rst
doc/schema/: attribute.rst  attribute_base.rst  attribute_directory.rst  attribute_history.rst  attribute_staging.rst  dimension.rst  directory.rst  entity_tag.rst  gis.rst  index.rst  metric.rst  (+13 more)
docker-resources/: create-minerva-database  create-minerva-prod-database  init-minerva-db-and-instance.sh  init-minerva-db-develop.sh  init-minerva-db-production.sh  recreate-minerva-database  run-tests-archive
docs/: Makefile  aliases.rst  attributes.rst  conf.py  entities.rst  index.rst  notifications.rst  requirements.txt  trends.rst
migrations/: 5.0.0_to_5.0.1.sql  5.0.1_to_5.0.2.sql  5.0.2_to_5.0.3.sql  5.0.3_to_5.0.4.sql  5.0.4_to_5.0.5.sql  5.0.5_to_5.0.6.sql  5.0.6_to_5.1.0.sql  5.0.6_to_5.1.1.sql  5.0.6_to_5.1.3.sql  5.1.3_to_5.1.4.sql  5.1.4_to_5.1.5.sql  5.1.5_to_5.1.6.sql  5.1.6_to_5.1.7.sql  5.1.7_to_5.2.0.sql  5.2.0_to_5.2.1.sql  5.2.1_to_5.2.2.sql  5.2.2_to_5.2.3.sql  5.2.3_to_5.3.0.sql  5.3.0_to_5.3.1.sql  5.3.1_to_5.3.2.sql  5.3.2_to_5.3.3.sql  5.3.3_to_5.3.4.sql  5.3.4_to_5.3.5.sql  5.3.5_to_5.3.6.sql  5.3.6_to_5.3.7.sql  trend_store_parts.sql
python-package/: setup.py
src/: #schema.sql#  schema.sql
style-guide/: README.md
tests/: entity_tag.sql
(+282 files in other folders)
