[workspace]
members = [
    "crates/minerva",
    "crates/cli",
    "crates/admin-service",
    "crates/integration-tests",
    "crates/event-service"
]
resolver = "2"

[workspace.package]
version = "8.1.1"
authors = ["1Optic <alfred.blokland@1optic.io>"]
edition = "2021"
license = "GPL-3.0-or-later"
